<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/collect_badge_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/livelike_rounded_solid_backgound">

        <TextView
            android:id="@+id/badge_name_tv"
            style="@style/livelike_large_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:shadowColor="#ffffff"
            android:shadowRadius="10"
            android:textColor="@color/livelike_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Newborn Expert" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="36dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/badge_earned_congrats_message"
            android:textColor="@color/livelike_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/badge_name_tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/badge_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/coins"
        tools:src="@drawable/coin" />

    <TextView
        android:id="@+id/collect_badge_button"
        android:layout_width="115dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/livelike_rank_label_gradient_background"
        android:gravity="center"
        android:text="@string/collect"
        android:textColor="#ffffff"
        android:textSize="14dp" />


</FrameLayout>